# AhSilence

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ancengine/: CMakeLists.txt  build.gradle.kts
ancengine/kotlin/: NativeAudioDSP.kt
ancengine/src/jni/: native_bridge.cpp
ancengine/src/main/: AndroidManifest.xml
ancengine/src/main/cpp/: CMakeLists.txt
ancengine/src/main/cpp/audio/: AncEngine.cpp  AncEngine.h
ancengine/src/main/cpp/dsp/: FxLmsFilter.h  Oscillator.h  SecondaryPathModel.h
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/bted/ahsilence/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bted/ahsilence/: MainActivity.kt
app/src/main/java/com/bted/ahsilence/core/constants/: AudioConstants.kt
app/src/main/java/com/bted/ahsilence/core/di/: AudioEngineLocator.kt
app/src/main/java/com/bted/ahsilence/core/logging/: AppLogger.kt
app/src/main/java/com/bted/ahsilence/data/engine/: FastFourier.kt  NativeAudioDSP.kt
app/src/main/java/com/bted/ahsilence/data/service/: ActiveHumService.kt
app/src/main/java/com/bted/ahsilence/domain/model/: AcousticState.kt
app/src/main/java/com/bted/ahsilence/domain/models/: AcousticState.kt
app/src/main/java/com/bted/ahsilence/domain/port/: AudioEngine.kt
app/src/main/java/com/bted/ahsilence/domain/ports/: AudioEngine.kt
app/src/main/java/com/bted/ahsilence/presentation/: ControlViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/bted/ahsilence/: ExampleUnitTest.kt
docs/: architecture.md  deployment.md  dsp-engine.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
